style: refactor